--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
     <h1 class="display-4">Welcome</h1>
     <p><a href="https://docs.microsoft.com/aspnet/core">Hola soy Adela la Ing de Calidad</a>.</p>
 </div>
+<div><iframe src='https://webchat.botframework.com/embed/qabot15-bot?s=YOUR_SECRET_HERE'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe></div>
